--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
     <section class="bg-gray-50 py-16">
         <div class="container mx-auto px-4 text-center">
             <h3 class="text-3xl font-bold text-gray-800 mb-6">
-                ¿Necesitas ayuda con algún trámite?
+                ¿No encuentras la información del trámite que requieres?
             </h3>
             <p class="text-xl text-gray-600 mb-8 max-w-2xl mx-auto">
-                Nuestro equipo está listo para resolver tus dudas, enviarte guías personalizadas y recordatorios
+                Nuestro equipo está disponible para ayudarte a encontrar el trámite exacto que necesitas
             </p>
             <a 
                 href="https://wa.me/51999999999?text=Hola,%20necesito%20ayuda%20con%20un%20trámite" 
@@ -373,20 +373,7 @@
                 <i class="fab fa-whatsapp text-3xl"></i>
                 <span>Escríbenos por WhatsApp</span>
             </a>
-            <div class="mt-8 grid md:grid-cols-3 gap-4 max-w-3xl mx-auto text-left">
-                <div class="bg-white p-4 rounded-lg shadow">
-                    <p class="text-sm text-gray-600">💬 Pregunta común:</p>
-                    <p class="text-gray-800 font-semibold">"¿Qué documentos necesito para mi matrícula?"</p>
-                </div>
-                <div class="bg-white p-4 rounded-lg shadow">
-                    <p class="text-sm text-gray-600">💬 Pregunta común:</p>
-                    <p class="text-gray-800 font-semibold">"¿Dónde tramito mi constancia de estudios?"</p>
-                </div>
-                <div class="bg-white p-4 rounded-lg shadow">
-                    <p class="text-sm text-gray-600">💬 Pregunta común:</p>
-                    <p class="text-gray-800 font-semibold">"¿Cuál es el proceso para reserva de matrícula?"</p>
-                </div>
-            </div>
+            
         </div>
     </section>
 
